# CemuMegaDownloader

./: CMakeLists.txt  titles.json
.github/workflows/: linux.yml  msys2.yml
include/: downloader.h  keygen.h  utils.h
src/: downloader.c  jsoncpp.cpp  keygen.c  main.cpp
src/cdecrypt/: cdecrypt.c
